--- a/app/views/providers/_provider_list.html.erb
+++ b/app/views/providers/_provider_list.html.erb
@@ -1,10 +1,31 @@
-<table id="providerList">
-	<tr>
-		<th>Last Name</th>
-		<th>First Name</th>
-		<th>Team</th>
-		<!--<th>Organization</th>-->
-		<th />
-	</tr>
-	<%= render partial: 'provider_row', collection: providers%>
+<table id="providerTable" class="display table-hover table-bordered">	
+	<thead id="hd" align="left">
+		<tr>
+		  <th>Last Name</th>
+		  <th>First Name</th>
+		  <th>Team</th>
+	  	<th> NPI </th>
+		 	<th/>
+		</tr>
+	</thead>
+
+  <tbody>
+  	<% @providers.each do |provider_row| %>
+			<tr data-provider="<%= provider_row.id %>">
+				<td><%= provider_row.family_name%></td>
+				<td><%= provider_row.given_name%></td>
+				<td><%= provider_row.team.try(:name) || "N/A" %></td>
+				<td><%= provider_row.npi %> </td>
+				<% if current_user.admin? %>
+					<td> <%= link_to "view / edit", :controller => "providers", :action => "show", :id => "#{provider_row.id}" %>  | <%= link_to "manage patients", manage_provider_patients_path(provider_row)%> | <%= link_to "view measures page", measures_path(:npi => provider_row.npi) %></td>
+				<% else %>
+					<td> <%= link_to "view", :controller => "providers", :action => "show", :id => "#{provider_row.id}" %> </td>	
+				<% end %>
+			</tr>
+		<% end %>
+	</tbody>
 </table>
+
+
+
+
