--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -1,3 +1,14 @@
-<div id="content">
-  <%= render :partial => "profile"%>
+<div id="content" style="margin-left:40px; margin-top:20px">  
+	<h2><%= @provider.full_name %></h2>
+	
+	<div>
+  <% if current_user.admin? %>
+		<%= render partial: 'show_profile' , locals: {disabled: false} %> 
+	<% else %>
+	  <%= render partial: 'show_profile', locals: {disabled: true} %>
+	<% end %>
+	<br>
+	<%= link_to "Return to Providers Page", "/providers", class: "btn btn-success" %>
+	</div>
 </div>
+
