--- a/app/views/measures/index.html.erb
+++ b/app/views/measures/index.html.erb
@@ -211,7 +211,7 @@
 			</div>
 			<br/>
 			
-			<%= button_to "Export Report", :controller => "measures", :action => "test" %>
+			<%#= button_to "Export Report", :controller => "measures", :action => "test" %>
 			
 		</div><!-- end #measureDetailTable -->
 		<table class="measureTable" style="float:left">
