--- a/app/views/admin/patients.html.erb
+++ b/app/views/admin/patients.html.erb
@@ -9,11 +9,11 @@
 </script>
 <% end -%>
 
-<div id="pageContent" style="padding:20px;">
-<h1><strong>Patients</strong></h1>
+<hr style='margin-bottom:-10px'>
+<h2 style="padding-left:40px"><strong>Patients</strong></h2>
+<hr style="margin-top:-5px">
 
-  <table>
-
+  <table style='margin-left:40px'>
     <tr><td>patients loaded: </td>
       <td>
         <%= @patient_count%> patients 
@@ -56,9 +56,38 @@
           <%= submit_tag("Upload") %>
         <% end %>
       </td>
-    </tr>  
-    
-    
+    </tr>     
   </table>
 
-</div> <!-- pageContent -->
+	<h3> Patient List: </h3>
+  
+		<table id="adminPatientTable" class="display table-bordered table-hover" style='width:100%;'>
+			<thead>
+				<tr>
+					<th>Last Name</th>
+					<th>First Name</th>
+					<th> Date of Birth </th>
+					<th> Age </th>
+					<th> Patient ID</th>
+					<th/>
+				</tr>
+			</thead>
+			
+			<tbody>
+				<% @records.each do |record| %>
+					<tr>
+						<td><%= record.last %></td>
+						<td><%= record.first %></td>
+						<td> <%= Time.at(record.birthdate).strftime('%m/%d/%Y') %> </td>		
+						<td> <%= Time.now.year - Time.at(record.birthdate).year %></td>
+						<% rec=record.medical_record_number %>
+						<% id = Record.where(medical_record_number: "#{rec}").first._id %>
+						<td> <%= rec %>
+						<td> <%= link_to "View Patient Summary", :controller => "patients", :action => "show", :id => "#{id}"%> </td>
+					</tr>
+				<% end %>
+			</tbody>
+		</table>
+ <br>
+ 
+ <br>
